--- a/Homepage.html
+++ b/Homepage.html
@@ -55,5 +55,6 @@
 	<h2>Robotics</h2>
 		<p>I will also add a picture of a elevator mechniasm we made in robotics which reaches up to 8ft high.</p>
 		<img src="https://i.imgur.com/VsJ4IXV.jpeg" alt="Robotics" style="width:200px;height:auto;">
+	</div>
 </body>
 </html>
