--- a/Homepage.html
+++ b/Homepage.html
@@ -12,16 +12,15 @@
 	</ul>
 	<header>
 		<h1>Homepage</h1>
-		<p>Hello Eveyrone, welcome to my website, where I will give you a introduction about myself along.</p>
-		<p>In addiiton, you will be able to check out my resume along with the hobbies I have.</p>
-		<p>hope you enjoy and if you have any questions dont hesitate to reach out!</p>
+		<p>Hello everyone, welcome to my website, where I will give you an introduction about myself.</p>
+		<p>In addition, you will be able to check out my resume along with the hobbies I have.</p>
+		<p>I hope you enjoy, and if you have any questions, do not hesitate to reach out!</p>
 	</header>
 	
         <h2>Introduction</h2>
-        <p>Hello, my name is Huzaifa Anis. I am a current sophomore at Illinois Institute of Technology (IIT), majoring in Cybersecurity & IT.</p>
-		<p>Previously, I was a computer engineering major however I switched my major going into my sophmore year as I figured Cybersecuity was a better fit for me.</p>
+        <p>Hello, my name is Huzaifa Anis. I am currently a sophomore at the Illinois Institute of Technology (IIT), majoring in Cybersecurity & IT.</p>
+		<p>Previously, I was a computer engineering major; however, I switched my major going into my sophomore year as I figured cybersecurity was a better fit for me.</p>
 		<p>I decided to pursue cybersecurity because of the exciting career opportunities it offers. Growing up, I was always fascinated by tech and engineering, so I believe cybersecurity is the perfect fit for me.</p> 
-		<p></p>
 		<p>Below, I'll share more about myself and my interests outside of college.</p>
   
     <h2>Background</h2>
@@ -29,7 +28,7 @@
         <ul>
             <li>Born and raised in the Rogers Park area of Chicago.</li>
             <li>Currently living in Lincolnwood, IL.</li>
-            <li>From Karachi, Pakistan.</li>
+            <li>Originally from Karachi, Pakistan.</li>
         </ul>
     </div>
 	
@@ -39,22 +38,14 @@
 		<p>I work part-time while attending college full-time. I work at Floor & Decor as a Pro Specialist, where I interact with contractors and customers on a daily basis.</p>
 		<p>Ultimately, it's a sales position, which I enjoy because of the variety of people I get to meet, such as contractors, real estate developers, DIY customers, and more.</p>
 		<p>Overall, the job is fun and provides a positive environment where I get to help people design their homes.</p>
-		<p>In addition, I’m also a coach for First Lego League and First Robotics Competition, where I mentor middle and high school students, teaching them how to program, design, and build.</p>
+		<p>In addition, I’m also a coach for First Lego League and the First Robotics Competition, where I mentor middle and high school students, teaching them how to program, design, and build.</p>
 		<p>I’ve loved FIRST Robotics ever since middle school and have been a part of the organization throughout my middle and high school years. I was the coach of my high school team and had the opportunity to go to state.</p>
 		<p>Because of my passion for robotics, I was given the opportunity to mentor students twice a week, helping them prepare for their competition, while also teaching and holding lessons.</p>
-		<p>Recently, I visited the Chicago Auto Show due to my passion for cars. I'll be adding some pictures below, along with those from my robotics experience</p>
+		<p>Recently, I visited the Chicago Auto Show due to my passion for cars. I'll be adding some pictures below, along with those from my robotics experience.</p>
 		<p>Anyway, that’s a little bit about myself, and I hope you enjoy the rest of the website!</p>
 	</div>
 	
 	<div>
 	<h2>Auto Show</h2>
-		<p>Here are some pictures I took from the auto show, Ill show the Lexus IS 500 which is a naturally aspiratd V8 with a sleek and sporty look.</p>
-		<p>I will also add the Aston Martin DB12 in the green. I love how the manufacture has a belnd of luxury, performace, and uniqe interior.</p>
-		<img src="https://i.imgur.com/SFvAWGu.jpeg" alt="Lexus" style="width:200px;height:auto;">
-		<img src="https://i.imgur.com/jZkorZK.jpeg" alt="Aston" style="width:200px;height:auto;">
-	<h2>Robotics</h2>
-		<p>I will also add a picture of a elevator mechniasm we made in robotics which reaches up to 8ft high.</p>
-		<img src="https://i.imgur.com/VsJ4IXV.jpeg" alt="Robotics" style="width:200px;height:auto;">
-	</div>
-</body>
-</html>
+		<p>Here are some pictures I took from the auto show. I'll show the Lexus IS 500, which is a naturally aspirated V8 with a sleek
+
