--- a/Homepage.html
+++ b/Homepage.html
@@ -52,7 +52,7 @@
 		<img src="https://i.imgur.com/SFvAWGu.jpeg" alt="Lexus" style="width:200px;height:auto;">
 		<img src="https://i.imgur.com/jZkorZK.jpeg" alt="Aston" style="width:200px;height:auto;">
 	<h2>Robotics</h2>
-		<p>I will also add a picture of an elevator mechanism we made in robotics, which reaches up to 8 feet high.</p>
+		<p>I will also add a picture of an elevator mechanism we made in robotics, which reaches up to 8 feet high. This was built for the First Robotics Competition (FRC) team where students design, build, and program robots to compete in a yearly challenge against other teams.</p>
 		<img src="https://i.imgur.com/VsJ4IXV.jpeg" alt="Robotics" style="width:200px;height:auto;">
 	</div>
 </body>
