--- a/hobbies.html
+++ b/hobbies.html
@@ -5,32 +5,40 @@
     <title>Huzaifa Anis - About Me</title>
 </head>
 <body>
-<ul>
-    <li><a href="Homepage.html">Home</a></li>
-    <li><a href="Hobbies.html">Hobbies</a></li>
-    <li><a href="index.html">Resume</a></li>
-</ul>
-  <header>
-    <h1>Hobbies!!!</h1>
-  </header>
-  
-    <h3>Weightlifting</h3>
-    <p>I go to the gym 4-5 times a week as part of my regular fitness routine. I've been weightlifting consistently for about 2 years now. I enjoy staying active, which also serves as a way of relaxing. If you're wondering, my workout split usually consists of push, pull, legs, along with cardio in between the week.</p>
-    <img src="https://img.freepik.com/premium-photo/gym-with-black-wall-sign-that-says-fitness-it_549702-1426.jpg?w=360" alt="Weightlifting" style="width:200px;height:auto;">
+    <nav>
+        <ul>
+            <li><a href="Homepage.html">Home</a></li>
+            <li><a href="Hobbies.html">Hobbies</a></li>
+            <li><a href="index.html">Resume</a></li>
+        </ul>
+    </nav>
 
-    <h3>Working on My Car</h3>
-    <p>I've always had a passion for cars. I own a Lexus IS 250, and I enjoy making small improvements like upgrading the intake, suspension, and handling maintenance to keep it in good shape. In addition, I've had the car for about a year and 8 months, during which I enjoy driving and taking care of it.</p>
-    <img src="https://i.ebayimg.com/images/g/XkgAAOSwdBRk6wUo/s-l1200.jpg" alt="Lexus" style="width:200px;height:auto;">
-    
-    <h3>Traveling</h3>
-    <p>I haven’t traveled outside the U.S. yet, but I love visiting new places. I’ve been to California, Boston, Tennessee, Michigan, and Kentucky, and I hope to travel internationally soon.</p>
-    <img src="https://miro.medium.com/v2/resize:fit:640/1*RCiBDKXhTM06twbL5PiPkQ.png" alt="Traveling" style="width:200px;height:auto;">
-    
-    <h3>Cooking</h3>
-    <p>I enjoy cooking and try to make time for it whenever I can. I often find new recipes online to experiment with different pastas and dishes. My go-to meal is steak with eggs and asparagus, especially after a workout. I also like to meal prep, making a variety of meals like butter chicken with rice, chicken parmesan, and more.</p>
-    <img src="https://assets.bonappetit.com/photos/5e7a6c79edf206000862e452/16:9/w_2580,c_limit/Cooking-Home-Collection.jpg" alt="Cooking" style="width:200px;height:auto;">
-</body>
-</html>
+    <header>
+        <h1>Hobbies!!!</h1>
+    </header>
 
+    <section>
+        <h3>Weightlifting</h3>
+        <p>I go to the gym 4-5 times a week as part of my regular fitness routine. I've been weightlifting consistently for about 2 years now...</p>
+        <img src="https://img.freepik.com/premium-photo/gym-with-black-wall-sign-that-says-fitness-it_549702-1426.jpg?w=360" alt="Weightlifting" style="width:200px;height:auto;">
+    </section>
+
+    <section>
+        <h3>Working on My Car</h3>
+        <p>I've always had a passion for cars. I own a Lexus IS 250...</p>
+        <img src="https://i.ebayimg.com/images/g/XkgAAOSwdBRk6wUo/s-l1200.jpg" alt="Lexus" style="width:200px;height:auto;">
+    </section>
+
+    <section>
+        <h3>Traveling</h3>
+        <p>I haven’t traveled outside the U.S. yet, but I love visiting new places...</p>
+        <img src="https://miro.medium.com/v2/resize:fit:640/1*RCiBDKXhTM06twbL5PiPkQ.png" alt="Traveling" style="width:200px;height:auto;">
+    </section>
+
+    <section>
+        <h3>Cooking</h3>
+        <p>I enjoy cooking and try to make time for it whenever I can...</p>
+        <img src="https://assets.bonappetit.com/photos/5e7a6c79edf206000862e452/16:9/w_2580,c_limit/Cooking-Home-Collection.jpg" alt="Cooking" style="width:200px;height:auto;">
+    </section>
 </body>
 </html>
