--- a/hobbies.html
+++ b/hobbies.html
@@ -7,8 +7,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="Homepage.html">Home</a></li>
-            <li><a href="Hobbies.html">Hobbies</a></li>
+            <li><a href="homepage.html">Home</a></li>
+            <li><a href="hobbies.html">Hobbies</a></li>
             <li><a href="index.html">Resume</a></li>
         </ul>
     </nav>
