--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <ul>
-    	<li><a href="Homepage.html">Home</a></li>
-    	<li><a href="Hobbies.html">Hobbies</a></li>
+    	<li><a href="homepage.html">Home</a></li>
+    	<li><a href="hobbies.html">Hobbies</a></li>
     	<li><a href="index.html">Resume</a></li>
 </ul>
     <header>
