--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Huzaifa Anis Resume</title>
+    <title>Huzaifa Anis</title>
 </head>
 <body>
 <ul>
