--- a/hobbies.html
+++ b/hobbies.html
@@ -20,25 +20,25 @@
     <section>
         <h3>Weightlifting</h3>
         <p>I go to the gym 4-5 times a week as part of my regular fitness routine. I've been weightlifting consistently for about 2 years now...</p>
-        <img src="https://img.freepik.com/premium-photo/gym-with-black-wall-sign-that-says-fitness-it_549702-1426.jpg?w=360" alt="Weightlifting">
+        <img src="pictures/gym.jpg" alt="Weightlifting">
     </section>
 
     <section>
         <h3>Working on My Car</h3>
         <p>I've always had a passion for cars. I own a Lexus IS 250...</p>
-        <img src="https://i.ebayimg.com/images/g/XkgAAOSwdBRk6wUo/s-l1200.jpg" alt="Lexus">
+        <img src="pictures/lexus.jpg" alt="Lexus">
     </section>
 
     <section>
         <h3>Traveling</h3>
         <p>I haven’t traveled outside the U.S. yet, but I love visiting new places...</p>
-        <img src="https://miro.medium.com/v2/resize:fit:640/1*RCiBDKXhTM06twbL5PiPkQ.png" alt="Traveling">
+        <img src="pictures/Travel.jpg" alt="Traveling">
     </section>
 
     <section>
         <h3>Cooking</h3>
         <p>I enjoy cooking and try to make time for it whenever I can...</p>
-        <img src="https://assets.bonappetit.com/photos/5e7a6c79edf206000862e452/16:9/w_2580,c_limit/Cooking-Home-Collection.jpg" alt="Cooking">
+        <img src="pictures/cooking.jpg" alt="Cooking">
     </section>
 </body>
 </html>
