--- a/homepage.html
+++ b/homepage.html
@@ -35,7 +35,7 @@
 	<h2>About Me</h2>
 	<div>
 		<p>I hope you enjoyed my introduction. I spent a lot of time talking about my education, but not as much about who I am as a person. In this section, I’ll provide a more detailed version of myself.</p>
-		<p>I work part-time while attending college full-time. I work at Floor & Decor as a Pro Specialist, where I interact with contractors and customers on a daily basis.</p>
+		<p>I work part-time while attending college full-time. I work at Floor & Decor as a Pro Specialist, where I interact with contractors and customers daily.</p>
 		<p>Ultimately, it's a sales position, which I enjoy because of the variety of people I meet, such as contractors, real estate developers, DIY customers, and more.</p>
 		<p>Overall, the job is fun and provides a positive environment where I get to help people design their homes.</p>
 		<p>In addition, I’m also a coach for the First Lego League and the First Robotics Competition, where I mentor middle and high school students, teaching them how to program, design, and build.</p>
