--- a/homepage.html
+++ b/homepage.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <title>Huzaifa Anis - Homepage</title>
   </head>
+
   <body>
     <ul>
       <li><a href="homepage.html">Home</a></li>
       <li><a href="hobbies.html">Hobbies</a></li>
       <li><a href="index.html">Resume</a></li>
     </ul>
+
     <header>
       <h1>Homepage</h1>
       <p>Hello, everyone. Welcome to my website, where I will give you an introduction about myself.</p>
@@ -17,23 +19,25 @@
       <p>I hope you enjoy it, and if you have any questions, do not hesitate to reach out!</p>
     </header>
 
-    <h2>Introduction</h2>
-    <p>Hello, my name is Huzaifa Anis. I am currently a sophomore at the Illinois Institute of Technology (IIT), majoring in Cybersecurity & IT.</p>
-    <p>Previously, I was a computer engineering major; however, I switched my major going into my sophomore year as I figured cybersecurity was a better fit for me.</p>
-    <p>I decided to pursue cybersecurity because of its exciting career opportunities. Growing up, I was always fascinated by tech and engineering, so I believe cybersecurity is the perfect fit for me.</p>
-    <p>Below, I'll share more about myself and my interests outside of college.</p>
+    <section>
+      <h2>Introduction</h2>
+      <p>Hello, my name is Huzaifa Anis. I am currently a sophomore at the Illinois Institute of Technology (IIT), majoring in Cybersecurity & IT.</p>
+      <p>Previously, I was a computer engineering major; however, I switched my major going into my sophomore year as I figured cybersecurity was a better fit for me.</p>
+      <p>I decided to pursue cybersecurity because of its exciting career opportunities. Growing up, I was always fascinated by tech and engineering, so I believe cybersecurity is the perfect fit for me.</p>
+      <p>Below, I'll share more about myself and my interests outside of college.</p>
+    </section>
 
-    <h2>Background</h2>
-    <div>
+    <section>
+      <h2>Background</h2>
       <ul>
         <li>Born and raised in the Rogers Park area of Chicago.</li>
         <li>Currently living in Lincolnwood, IL.</li>
         <li>Originally from Karachi, Pakistan.</li>
       </ul>
-    </div>
+    </section>
 
-    <h2>About Me</h2>
-    <div>
+    <section>
+      <h2>About Me</h2>
       <p>I hope you enjoyed my introduction. I spent a lot of time talking about my education, but not as much about who I am as a person. In this section, I’ll provide a more detailed version of myself.</p>
       <p>I work part-time while attending college full-time. I work at Floor & Decor as a Pro Specialist, where I interact with contractors and customers daily.</p>
       <p>Ultimately, it's a sales position, which I enjoy because of the variety of people I meet, such as contractors, real estate developers, DIY customers, and more.</p>
@@ -43,14 +47,22 @@
       <p>Because of my passion for robotics, I was allowed to mentor students twice a week, helping them prepare for their competition while also teaching and holding lessons.</p>
       <p>Recently, I visited the Chicago Auto Show due to my passion for cars. I'll be adding some pictures below, along with those from my robotics experience.</p>
       <p>Anyway, that’s a little bit about myself, and I hope you enjoy the rest of the website!</p>
-    </div>
+    </section>
 
-    <div>
+    <section>
       <h2>Auto Show</h2>
       <p>Here are some pictures I took from the auto show. I'll show the Lexus IS 500, which is a naturally aspirated V8 with a sleek and sporty look.</p>
       <p>I will also add the Aston Martin DB12 in green. I love how the manufacturer has a blend of luxury, performance, and unique interior design.</p>
       <img src="pictures/lexus-500.jpg" alt="Lexus">
       <img src="pictures/aston-martin.jpg" alt="Aston">
+    </section>
+
+    <section>
       <h2>Robotics</h2>
-      <p>I will also add a picture of an elevator mechanism we made in robotics, which reaches up to 8 feet high. This was built for the 
+      <p>I will also add a picture of an elevator mechanism we made in robotics, which reaches up to 8 feet high. This was built for the First Robotics Competition (FRC) team where students design, build, and program robots to compete in a yearly challenge against other teams.</p>
+      <img src="pictures/robot_arm.jpg" alt="Robotics">
+    </section>
+  </body>
+</html>
+
 
