--- a/homepage.html
+++ b/homepage.html
@@ -53,14 +53,14 @@
       <h2>Auto Show</h2>
       <p>Here are some pictures I took from the auto show. I'll show the Lexus IS 500, which is a naturally aspirated V8 with a sleek and sporty look.</p>
       <p>I will also add the Aston Martin DB12 in green. I love how the manufacturer has a blend of luxury, performance, and unique interior design.</p>
-      <img src="pictures/lexus-500.JPG" alt="Lexus">
+      <img src="pictures/lexus-500.jpg" alt="Lexus">
       <img src="pictures/aston-martin.jpg" alt="Aston">
     </section>
 
     <section>
       <h2>Robotics</h2>
       <p>I will also add a picture of an elevator mechanism we made in robotics, which reaches up to 8 feet high. This was built for the First Robotics Competition (FRC) team where students design, build, and program robots to compete in a yearly challenge against other teams.</p>
-      <img src="pictures/robot_arm.JPG" alt="Robotics">
+      <img src="pictures/robot_arm.jpg" alt="Robotics">
     </section>
   </body>
 </html>
